<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jnorbury.jonahnorbury_pset5.AddListActivity">

    <TextView
        android:text="Choose a type of List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseListTV"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/create_list_text_view"
        android:layout_width="wrap_content"
        android:onClick="addListofTypeRadio"
        android:layout_height="wrap_content"
        android:id="@+id/CreateListBTN"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameListET"
        android:hint="enter name here"
        android:textAlignment="center"
        android:background="@drawable/border"
        android:layout_above="@+id/CreateListBTN"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:id="@+id/linlea"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseListTV"
        android:layout_centerHorizontal="true">

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/listsRadioGroup"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/groceries_radio_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/groceriesRB"
                android:layout_weight="1"
                android:tag="Groceries"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appIdeaRB"
                android:layout_weight="1"
                android:tag="App Idea"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/app_idea_list_radio_button_text"
                android:textSize="18sp"/>

            <RadioButton
                android:text="@string/homework_radio_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/homeworkRB"
                android:layout_weight="1"
                android:tag="Homework"
                android:fontFamily="sans-serif-condensed"
                android:textSize="18sp" />

        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
