<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/your_to_do_lists_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/masterTitleTextView"
                android:textSize="22sp"
                android:paddingTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/masterTitleTextView"
            android:layout_above="@+id/button"
            android:layout_weight="1">

            <ListView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/listsListView"
                android:background="@drawable/bg_key"/>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/genericListView"/>

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <Button
                android:text="@string/add_item_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addItemButton"
                android:onClick="addNewItem"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-condensed" />

            <Button
                android:text="@string/add_new_list_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="makeNewList"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
